--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,7 +4,7 @@
   padding-bottom: 60px;
 }
 
-.footer-container {
+.footer__container {
   display: flex;
   width: 1200px;
   padding-left: 15px;
@@ -12,11 +12,11 @@
   margin: 0 auto;
 }
 
-.address-container {
+.footer__address-wrap {
   margin-right: 70px;
 }
 
-.logo-blue {
+.logo__blue {
   display: flex;
   align-items: center;
   font-family: "Raleway", sans-serif;
@@ -27,57 +27,41 @@
   color: var(--accent-color);
   margin-bottom: 20px;
 }
-.logo-white {
+.logo__white {
   display: flex;
   align-items: center;
   color: var(--second-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-list li:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-address {
+.footer__address-link {
   font-family: Roboto;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.footer__address-link--white {
   color: var(--second-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer .link:hover,
-.footer .link:focus {
-  color: var(--accent-color);
-}
-
-.footer-email {
-  font-family: Roboto;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-tel {
-  font-family: Roboto;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-social-container {
+.footer__social-wrap {
   display: block;
   margin-right: 93px;
 }
 
-.footer-social-title {
+.footer__social-title {
   margin-bottom: 20px;
   font-weight: 500;
   font-size: 14px;
@@ -87,19 +71,19 @@
   color: var(--second-text-color);
 }
 
-.footer-social-list {
+.footer__social-list {
   display: flex;
 }
 
-.footer-social-item {
+.footer__social-item {
   width: 44px;
   height: 44px;
-  & + .footer-social-item {
+  & + .footer__social-item {
     margin-left: 10px;
   }
 }
 
-.footer-social-link {
+.footer__social-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,19 +98,19 @@
   }
 }
 
-.footer-icon {
+.footer__icon {
   fill: var(--second-text-color);
 }
 
-.subscription-container {
+.subscription {
   display: block;
 }
 
-.subscription-wrap {
+.subscription__wrap {
   display: flex;
 }
 
-.subscription-title {
+.subscription__title {
   width: 100%;
   margin-bottom: 20px;
   font-weight: 500;
@@ -136,13 +120,13 @@
   text-transform: uppercase;
   color: var(--second-text-color);
 }
-.footer-subscription {
+.subscription-form {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.input-subscription {
+.subscription-form__input {
   width: 358px;
   height: 50px;
   padding-left: 16px;
@@ -162,12 +146,12 @@
   }
 }
 
-.subscription-item {
+.ssubscription-form__item {
   width: 24px;
   height: 24px;
   margin-left: 10px;
 }
-.subscription-btn {
+.subscription-form__btn {
   display: flex;
   align-items: center;
   justify-content: center;
