--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,34 +1,34 @@
-.section-benefits {
+.benefits {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.benefits-container {
+.benefits__container {
   height: auto;
 }
 
-.benefits-list {
+.benefits__list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.benefits-item {
+.benefits__item {
   flex-basis: calc(100% / 4 - 30%);
   &:not(:first-child) {
     margin-left: 30px;
   }
 }
 
-.benefits-icon-container {
+.benefits__wrap {
   display: flex;
   margin-bottom: 30px;
 }
 
-.benefits-icon {
+.benefits__icon {
   width: 270px;
 }
 
-.benefits-title {
+.benefits__title {
   width: 270px;
   padding-bottom: 10px;
   font-weight: 700;
@@ -39,7 +39,7 @@
   color: var(--primary-text-color);
 }
 
-.benefits-text {
+.benefits__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
