--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,37 +1,36 @@
-.clients-section {
+.clients {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.clients-container {
+.clients__container {
   flex-direction: column;
 }
 
-.clients-title {
+.clients__title {
   margin-bottom: 50px;
-  @include main-title-font(700, 36px, 1.16, center, 0.03em);
-  // font-weight: 700;
-  // font-size: 36px;
-  // line-height: 1.16;
-  // text-align: center;
-  // letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.clients-item {
+.clients__item {
   width: 170px;
   height: 92px;
-  & + .clients-item {
+  & + .clients__item {
     margin-left: 30px;
   }
 }
 
-.clients-link {
+.clients__link {
   display: flex;
   width: 100%;
   height: 100%;
@@ -48,13 +47,13 @@
   }
 }
 
-.clients-icon {
+.clients__icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .clients-link:hover & {
+  .clients__link:hover & {
     fill: var(--accent-color);
   }
-  .clients-link:focus & {
+  .clients__link:focus & {
     fill: var(--accent-color);
   }
 }
