--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,29 +7,25 @@
 .header-nav {
   display: flex;
 }
-.header-list {
+.site-nav {
   display: flex;
   margin-left: 93px;
   margin-right: auto;
 }
 
-.header-list {
-  li {
-    margin-right: 50px;
-  }
+.site-nav__item {
+  margin-right: 50px;
 }
 
-.header-list {
-  li:last-child {
-    margin-right: 0;
-  }
+.site-nav__item:last-child {
+  margin-right: 0;
 }
 
-.logo-black {
+.logo--black {
   color: var(--primary-text-color);
 }
 
-.header-link {
+.site-nav__link {
   display: block;
   position: relative;
   padding: 6px 20px 6px 20px;
@@ -46,11 +42,11 @@
   }
 }
 
-.current {
+.site-nav__link--current {
   color: var(--accent-color);
 }
 
-.header-link.current::after {
+.site-nav__link--current::after {
   content: "";
   width: 100%;
   height: 4px;
@@ -61,19 +57,17 @@
   border-radius: 2px;
 }
 
-.header-adress-list {
+.header-address {
   display: flex;
   align-items: center;
   margin-left: auto;
 }
 
-.header-adress-list {
-  .item:not(:last-child) {
-    margin-right: 50px;
-  }
+.header-address__item:not(:last-child) {
+  margin-right: 50px;
 }
 
-.header-address-link {
+.header-address__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -88,11 +82,11 @@
   }
 }
 
-.address-icon {
+.header-address__icon {
   margin-right: 10px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .header-address-link:hover &,
-  .header-address-link:focus & {
+  .header-address__link:hover &,
+  .header-address__link:focus & {
     fill: var(--accent-color);
   }
 }
