--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,30 +1,29 @@
-.section-team {
+.team {
   background-color: var(--second-background-color);
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.team-container {
+.team__container {
   display: flex;
   flex-direction: column;
 }
 
-.team-main-title {
-  @include main-title-font(700, 36px, 1.16, center, 0.03em);
+.team__main-title {
   margin-bottom: 50px;
-  // font-weight: 700
-  // font-size: 36px
-  // line-height: 1.16
-  // text-align: center
-  // letter-spacing: 0.03em
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
 
-.team-list {
+.team__list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.team-item {
+.team__item {
   background: #ffffff;
   /* material shadow v1 */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -35,7 +34,7 @@
   }
 }
 
-.team-title {
+.team__title {
   padding-top: 30px;
   padding-bottom: 10px;
   font-weight: 500;
@@ -46,7 +45,7 @@
   color: var(--primary-text-color);
 }
 
-.team-text {
+.team__text {
   padding-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
@@ -55,7 +54,7 @@
   letter-spacing: 0.03em;
   color: var(--third-text-color);
 }
-.team-social-list {
+.socials {
   display: flex;
   max-width: 270px;
   align-items: center;
@@ -63,15 +62,15 @@
   padding-bottom: 30px;
 }
 
-.team-icon-item {
+.socials__item {
   width: 44px;
   height: 44px;
-  & + .team-icon-item {
+  & + .socials__item {
     margin-left: 10px;
   }
 }
 
-.team-icon-link {
+.socials__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,15 +85,16 @@
   &:focus {
     background-color: var(--accent-color);
   }
-  & + .team-icon-link {
-    margin-left: 10px;
-  }
 }
 
-.benefits-icon {
+.socials__link + .socials__link {
+  margin-left: 10px;
+}
+
+.socials__icon {
   fill: #afb1b8;
-  .team-icon-link:hover &,
-  .team-icon-link:focus & {
+  .socials__link:hover &,
+  .socials__link:focus & {
     fill: currentColor;
   }
 }
