--- a/css/main.css
+++ b/css/main.css
@@ -868,17 +868,17 @@ body {
   fill: var(--accent-color);
 }
 
-.section-portfolio {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.portfolio-container {
+.portfolio__container {
   display: flex;
   flex-direction: column;
 }
 
-.portfolio-btn-list {
+.portfolio__btn-list {
   display: flex;
   margin-bottom: 50px;
   /* outline: 2px solid tomato; */
@@ -888,7 +888,7 @@ body {
   margin-right: auto;
 }
 
-.portfolio-btn {
+.portfolio__btn {
   display: inline-block;
   font-family: inherit;
   font-weight: 500;
@@ -905,46 +905,46 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn:active {
+.portfolio__btn:active {
   background-color: var(--accent-color);
   color: var(--second-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-btn:hover, .portfolio-btn:focus {
+.portfolio__btn:hover, .portfolio__btn:focus {
   background-color: var(--accent-color);
   color: var(--second-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-btn-list li {
+.portfolio__btn-item {
   margin-right: 8px;
 }
 
-.portfolio-btn-list li:last-child {
+.portfolio__btn-item:last-child {
   margin-right: 0;
 }
 
-.portfolio-item-list {
+.portfolio__item-list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.portfolio-item {
+.portfolio__item {
   flex-basis: calc((100% - 2 * 30px) / 3);
   margin-left: 30px;
   margin-bottom: 30px;
 }
 
-.portfolio-item:nth-child(n + 7) {
+.portfolio__item:nth-child(n + 7) {
   margin-bottom: 0;
 }
 
-.portfolio-item:nth-child(3n + 1) {
+.portfolio__item:nth-child(3n + 1) {
   margin-left: 0;
 }
 
-.cart-container {
+.portfolio__cart {
   padding-left: 24px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -953,7 +953,7 @@ body {
   border-bottom: solid 1px var(--site-border-color);
 }
 
-.portfolio-title {
+.portfolio__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -961,35 +961,32 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-title:hover, .portfolio-title:focus {
+.portfolio__title:hover, .portfolio__title:focus {
   color: var(--accent-color);
 }
 
-.portfolio-text {
+.portfolio__text {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--third-text-color);
 }
 
-.portfolio-item-list .link {
+.portfolio__link {
   color: inherit;
-}
-
-.portfolio-link {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover, .portfolio-link:focus {
+.portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-overlay {
+.portfolio__overlay {
   position: relative;
   overflow: hidden;
 }
 
-.overlay-text {
+.portfolio__overlay-text {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1005,8 +1002,8 @@ body {
   opacity: 0;
 }
 
-.portfolio-link:hover .overlay-text,
-.portfolio-link:focus .overlay-text {
+.portfolio__link:hover .portfolio__overlay-text,
+.portfolio__link:focus .portfolio__overlay-text {
   opacity: 1;
   animation-name: portfolioanim;
   animation-duration: 300ms;
