--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,14 +1,14 @@
-.section-portfolio {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.portfolio-container {
+.portfolio__container {
   display: flex;
   flex-direction: column;
 }
 
-.portfolio-btn-list {
+.portfolio__btn-list {
   display: flex;
   margin-bottom: 50px;
   /* outline: 2px solid tomato; */
@@ -18,7 +18,7 @@
   margin-right: auto;
 }
 
-.portfolio-btn {
+.portfolio__btn {
   display: inline-block;
   font-family: inherit;
   font-weight: 500;
@@ -49,24 +49,19 @@
   }
 }
 
-.portfolio-btn-list {
-  li {
-    margin-right: 8px;
-  }
-}
-
-.portfolio-btn-list {
-  li:last-child {
+.portfolio__btn-item {
+  margin-right: 8px;
+  &:last-child {
     margin-right: 0;
   }
 }
 
-.portfolio-item-list {
+.portfolio__item-list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.portfolio-item {
+.portfolio__item {
   flex-basis: calc((100% - 2 * 30px) / 3);
   margin-left: 30px;
   margin-bottom: 30px;
@@ -78,7 +73,7 @@
   }
 }
 
-.cart-container {
+.portfolio__cart {
   padding-left: 24px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -87,7 +82,7 @@
   border-bottom: solid 1px var(--site-border-color);
 }
 
-.portfolio-title {
+.portfolio__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -99,19 +94,15 @@
   }
 }
 
-.portfolio-text {
+.portfolio__text {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--third-text-color);
 }
-.portfolio-item-list {
-  .link {
-    color: inherit;
-  }
-}
 
-.portfolio-link {
+.portfolio__link {
+  color: inherit;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
@@ -120,12 +111,12 @@
   }
 }
 
-.portfolio-overlay {
+.portfolio__overlay {
   position: relative;
   overflow: hidden;
 }
 
-.overlay-text {
+.portfolio__overlay-text {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -139,8 +130,8 @@
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   opacity: 0;
-  .portfolio-link:hover &,
-  .portfolio-link:focus & {
+  .portfolio__link:hover &,
+  .portfolio__link:focus & {
     opacity: 1;
     animation-name: portfolioanim;
     animation-duration: 300ms;
