--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -9,13 +9,14 @@
 }
 
 .team__main-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
+  @include font;
+  // font-weight: 700;
+  // font-size: 36px;
+  // line-height: 1.16;
+  // text-align: center;
+  // letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  margin-bottom: 50px;
 }
 
 .team__list {
