--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -9,7 +9,7 @@
 }
 
 .team__main-title {
-  @include font;
+  @include main-title-font;
   // font-weight: 700;
   // font-size: 36px;
   // line-height: 1.16;
