--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -8,12 +8,13 @@
 }
 
 .services__title {
+  @include main-title-font;
   margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
+  // font-weight: 700;
+  // font-size: 36px;
+  // line-height: 1.16;
+  // text-align: center;
+  // letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
 
