--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,6 @@ body {
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .logo:hover, .logo:focus {
   color: var(--accent-color);
 }
@@ -167,11 +166,9 @@ body {
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .input-modal:focus {
   border-color: var(--accent-color);
 }
-
 .input-modal .input-modal:focus + .input-icon {
   fill: var(--accent-color);
 }
@@ -200,11 +197,23 @@ body {
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .online-comments:focus {
   border-color: var(--accent-color);
 }
-
+.online-comments::-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.online-comments:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .online-comments::placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -285,17 +294,17 @@ body {
   display: flex;
 }
 
-.site-nav {
+.header-nav__list {
   display: flex;
   margin-left: 93px;
   margin-right: auto;
 }
 
-.site-nav__item {
+.header-nav__item {
   margin-right: 50px;
 }
 
-.site-nav__item:last-child {
+.header-nav__item:last-child {
   margin-right: 0;
 }
 
@@ -303,7 +312,7 @@ body {
   color: var(--primary-text-color);
 }
 
-.site-nav__link {
+.header-nav__link {
   display: block;
   position: relative;
   padding: 6px 20px 6px 20px;
@@ -315,16 +324,15 @@ body {
   color: var(--primary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.site-nav__link:hover, .site-nav__link:focus {
+.header-nav__link:hover, .header-nav__link:focus {
   color: var(--accent-color);
 }
 
-.site-nav__link--current {
+.header-nav__link--current {
   color: var(--accent-color);
 }
 
-.site-nav__link--current::after {
+.header-nav__link--current::after {
   content: "";
   width: 100%;
   height: 4px;
@@ -355,7 +363,6 @@ body {
   color: var(--third-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .header-address__link:hover, .header-address__link:focus {
   color: var(--accent-color);
 }
@@ -364,9 +371,7 @@ body {
   margin-right: 10px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.header-address__link:hover .header-address__icon,
-.header-address__link:focus .header-address__icon {
+.header-address__link:hover .header-address__icon, .header-address__link:focus .header-address__icon {
   fill: var(--accent-color);
 }
 
@@ -420,7 +425,6 @@ body {
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .footer__address-link:hover, .footer__address-link:focus {
   color: var(--accent-color);
 }
@@ -452,7 +456,6 @@ body {
   width: 44px;
   height: 44px;
 }
-
 .footer__social-item + .footer__social-item {
   margin-left: 10px;
 }
@@ -467,7 +470,6 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .footer__social-link:hover, .footer__social-link:focus {
   background-color: var(--accent-color);
 }
@@ -513,7 +515,20 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
-
+.subscription-form__input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscription-form__input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
 .subscription-form__input::placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -606,7 +621,6 @@ body {
 .benefits__item {
   flex-basis: calc(100% / 4 - 30%);
 }
-
 .benefits__item:not(:first-child) {
   margin-left: 30px;
 }
@@ -667,7 +681,6 @@ body {
 .services__item {
   position: relative;
 }
-
 .services__item::before {
   content: "";
   position: absolute;
@@ -677,8 +690,7 @@ body {
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
 }
-
-.services__item:nth-child(n + 2) {
+.services__item:nth-child(n+2) {
   margin-left: 30px;
 }
 
@@ -711,8 +723,13 @@ body {
 }
 
 .team__main-title {
-  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  margin-bottom: 50px;
 }
 
 .team__list {
@@ -726,8 +743,7 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.team__item:nth-child(n + 2) {
+.team__item:nth-child(n+2) {
   margin-left: 30px;
 }
 
@@ -764,7 +780,6 @@ body {
   width: 44px;
   height: 44px;
 }
-
 .socials__item + .socials__item {
   margin-left: 10px;
 }
@@ -780,7 +795,6 @@ body {
   color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .socials__link:hover, .socials__link:focus {
   background-color: var(--accent-color);
 }
@@ -792,9 +806,7 @@ body {
 .socials__icon {
   fill: #afb1b8;
 }
-
-.socials__link:hover .socials__icon,
-.socials__link:focus .socials__icon {
+.socials__link:hover .socials__icon, .socials__link:focus .socials__icon {
   fill: currentColor;
 }
 
@@ -826,7 +838,6 @@ body {
   width: 170px;
   height: 92px;
 }
-
 .clients__item + .clients__item {
   margin-left: 30px;
 }
@@ -841,11 +852,9 @@ body {
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .clients__link:hover {
   border: 1px solid var(--accent-color);
 }
-
 .clients__link:focus {
   border: 1px solid var(--accent-color);
 }
@@ -854,11 +863,9 @@ body {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .clients__link:hover .clients__icon {
   fill: var(--accent-color);
 }
-
 .clients__link:focus .clients__icon {
   fill: var(--accent-color);
 }
@@ -899,13 +906,11 @@ body {
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .portfolio__btn:active {
   background-color: var(--accent-color);
   color: var(--second-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
 .portfolio__btn:hover, .portfolio__btn:focus {
   background-color: var(--accent-color);
   color: var(--second-text-color);
@@ -915,7 +920,6 @@ body {
 .portfolio__btn-item {
   margin-right: 8px;
 }
-
 .portfolio__btn-item:last-child {
   margin-right: 0;
 }
@@ -930,12 +934,10 @@ body {
   margin-left: 30px;
   margin-bottom: 30px;
 }
-
-.portfolio__item:nth-child(n + 7) {
+.portfolio__item:nth-child(n+7) {
   margin-bottom: 0;
 }
-
-.portfolio__item:nth-child(3n + 1) {
+.portfolio__item:nth-child(3n+1) {
   margin-left: 0;
 }
 
@@ -955,7 +957,6 @@ body {
   letter-spacing: 0.06em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .portfolio__title:hover, .portfolio__title:focus {
   color: var(--accent-color);
 }
@@ -971,7 +972,6 @@ body {
   color: inherit;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -996,12 +996,21 @@ body {
   color: var(--second-text-color);
   opacity: 0;
 }
-
-.portfolio__link:hover .portfolio__overlay-text,
-.portfolio__link:focus .portfolio__overlay-text {
+.portfolio__link:hover .portfolio__overlay-text, .portfolio__link:focus .portfolio__overlay-text {
   opacity: 1;
-  animation-name: portfolioanim;
-  animation-duration: 300ms;
+  -webkit-animation-name: portfolioanim;
+          animation-name: portfolioanim;
+  -webkit-animation-duration: 300ms;
+          animation-duration: 300ms;
+}
+
+@-webkit-keyframes portfolioanim {
+  0% {
+    transform: translatey(100%);
+  }
+  100% {
+    transform: translatey(0%);
+  }
 }
 
 @keyframes portfolioanim {
@@ -1012,7 +1021,6 @@ body {
     transform: translatey(0%);
   }
 }
-
 :root {
   --primary-text-color: #212121;
   --second-text-color: #ffffff;
@@ -1033,7 +1041,7 @@ body {
   border: 0;
   padding: 0;
   clip: rect(0 0 0 0);
-  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
   margin: -1px;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
