--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -8,13 +8,12 @@
 }
 
 .clients__title {
-  @include main-title-font;
   margin-bottom: 50px;
-  // font-weight: 700;
-  // font-size: 36px;
-  // line-height: 1.16;
-  // text-align: center;
-  // letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .clients__list {
