--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,17 +7,17 @@
 .header-nav {
   display: flex;
 }
-.site-nav {
+.header-nav__list {
   display: flex;
   margin-left: 93px;
   margin-right: auto;
 }
 
-.site-nav__item {
+.header-nav__item {
   margin-right: 50px;
 }
 
-.site-nav__item:last-child {
+.header-nav__item:last-child {
   margin-right: 0;
 }
 
@@ -25,7 +25,7 @@
   color: var(--primary-text-color);
 }
 
-.site-nav__link {
+.header-nav__link {
   display: block;
   position: relative;
   padding: 6px 20px 6px 20px;
@@ -42,11 +42,11 @@
   }
 }
 
-.site-nav__link--current {
+.header-nav__link--current {
   color: var(--accent-color);
 }
 
-.site-nav__link--current::after {
+.header-nav__link--current::after {
   content: "";
   width: 100%;
   height: 4px;
